<?xml version="1.0"?>
<package format="2">
  <name>au_sonar</name>
  <version>0.0.0</version>
  <description>The au_sonar package</description>

  <license>MIT</license>

  <maintainer email="rumman.waqar05@gmail.com">Rumman Waqar</maintainer>
  <author email="rumman.waqar05@gmail.com">Rumman Waqar</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <build_depend>angles</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>au_core</build_depend>
  <exec_depend>angles</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>au_core</exec_depend>

  <export></export>
</package>
